Updating intermediate run